# TurkishSpellChecker-CPP

./: .gitignore  CMakeLists.txt  NGramSpellChecker.cpp  NGramSpellChecker.h  README.md  SimpleSpellChecker.cpp  SimpleSpellChecker.h  TestSpellChecker.cpp  conanfile.py  conanfile.txt
Test/: ContextBasedSpellCheckerTest.cpp  NGramSpellCheckerTest.cpp  SimpleSpellCheckerTest.cpp  TrieBasedSpellCheckerTest.cpp
include/: NGramNode.h
src/: CMakeLists.txt  Candidate.cpp  Candidate.h  ContextBasedSpellChecker.cpp  ContextBasedSpellChecker.h  NGramSpellChecker.cpp  NGramSpellChecker.h  Operator.h  SimpleSpellChecker.cpp  SimpleSpellChecker.h  SpellChecker.h  SpellCheckerParameter.cpp  SpellCheckerParameter.h  SpellCheckerTrie.cpp  SpellCheckerTrie.h  SpellCheckerTrieNode.cpp  SpellCheckerTrieNode.h  TrieBasedSpellChecker.cpp  TrieBasedSpellChecker.h  TrieCandidate.cpp  TrieCandidate.h
